package examenes;

public class Alumno {
    private String nombre;
    private String apellido;
    private int legajo;

    public Alumno(String nombre, String apellido, int legajo) {
        this.nombre = nombre;
        this.apellido = apellido;
        this.legajo = legajo;
    }
}
